# docs/swagger.json
@@ -15,9 +15,59 @@
     },
     "basePath": "/",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login API",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "default": "test@test.com",
+                        "example": "test@test.com",
+                        "description": "email address",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "default": "password123",
+                        "example": "password123",
+                        "description": "password",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/logout": {
             "get": {
-                "description": "Logout",
+                "description": "Logout API",
                 "consumes": [
                     "application/json"
                 ],
